<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name_new">MathCard</string>
    <string name="app_name">OldMathCard</string>
    <string name="button1">Answer 1</string>
    <string name="button2">Answer 2</string>
    <string name="button3">Answer 3</string>
    <string name="action_settings">Settings</string>
    <string name="answers_correct">Correct</string>
    <string name="sum">sum</string>
    <string name="level">Level</string>
    <string name="title_activity_home">Lets Do Math</string>
    <string name="title_activity_display_score">DisplayScore</string>

    <string-array name="games_count_array">
        <item>5</item>
        <item>10</item>
    </string-array>
    <string-array name="Game_Level_array">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Expert</item>
    </string-array>
    <string-array name="score_filter_array">
        <item>Addition</item>
        <item>Subtraction</item>
        <item>Multiplication</item>
        <item>Division</item>
    </string-array>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_final_score">FinalScoreActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_game">New Game</string>
    <string name="score_board">Score Board</string>
    <string name="game_over">"Game Over !!! "</string>

</resources>
