<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tablelayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.skk.mathcard.activity.MainActivity" >
  
    <RelativeLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/TextView_Level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:text="@string/level"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/buttonContinue"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:background="@drawable/imagenext100"/>
        <TextView
            android:id="@+id/TextView_Counter"
            android:paddingTop="20dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answers_correct"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:textStyle="bold" 
            android:layout_below="@id/TextView_Level"/>
     <TextView
            android:id="@+id/TextView_Score"
            android:paddingTop="20dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:textStyle="bold" 
            android:layout_below="@id/TextView_Counter"/>
        
        

        
    </RelativeLayout>

    <TableRow
        android:id="@+id/tableRowCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" >
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF0000" />

    <TableRow
        android:id="@+id/tableRowNumOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" >

        <TextView
            android:id="@+id/space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dip"
            android:text=""
            android:width="20dip" />

        <TextView
            android:id="@+id/first_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:gravity="left"
            android:padding="10dip"
            android:text="First Number"
           android:textStyle="bold" 
            android:textSize="25sp"
            android:width="20dip" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRowSecNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" >

        <TextView
            android:id="@+id/sum_char"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="10dip"
            android:text="+"
            android:textSize="25sp"
            android:width="20dip" />

        <TextView
            android:id="@+id/sec_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:textStyle="bold" 
            android:gravity="left"
            android:padding="10dip"
            android:text="Second Number"
            android:textSize="25sp"
            android:width="20dip" />
    </TableRow>

    <View
        android:layout_height="5dip"
        android:background="#FF0000" />

    <TableRow
        android:id="@+id/tableRowAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" >

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:text="@string/button1"
            android:textSize="25sp"
            android:width="20dip" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:text="@string/button2"
            android:textSize="25dp"
            android:width="20dip" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:text="@string/button3"
            android:textSize="25dp"
            android:width="20dip" />
    </TableRow>

    <View
        android:layout_height="5dip"
        android:layout_marginTop="10dip"
        android:background="#FF0000" />

</TableLayout>